--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "bookkeeper"
+name = "nigel"
 version = "0.1.0"
-description = "Cash-basis bookkeeping CLI for Raygun"
+description = "Cash-basis bookkeeping CLI for small consultancies"
 requires-python = ">=3.12"
 dependencies = [
     "typer>=0.15",
@@ -10,14 +10,14 @@ dependencies = [
 ]
 
 [project.scripts]
-bookkeeper = "bookkeeper.cli:app"
+nigel = "nigel.cli:app"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/bookkeeper"]
+packages = ["src/nigel"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
