refactor: replace institution-specific tests with synthetic fixtures
Remove BofA CSV fixture files (now in nigel-bofa plugin). Rewrite
test_importer.py to test import_file() mechanics using a synthetic
CSV parser registered at module scope. Update test_cli.py to also
use synthetic fixtures instead of BofA-specific ones. Add uv.sources
path deps to plugin pyproject.toml files for local development.

--- a/plugins/nigel-export-pdf/pyproject.toml
+++ b/plugins/nigel-export-pdf/pyproject.toml
@@ -5,6 +5,9 @@ description = "PDF export plugin for Nigel reports"
 requires-python = ">=3.12"
 dependencies = ["nigel", "weasyprint>=62", "jinja2>=3.1"]
 
+[tool.uv.sources]
+nigel = { path = "../..", editable = true }
+
 [project.entry-points."nigel.plugins"]
 export_pdf = "nigel_export_pdf.plugin"
 
