--- a/plugins/nigel-bofa/pyproject.toml
+++ b/plugins/nigel-bofa/pyproject.toml
@@ -5,6 +5,9 @@ description = "Bank of America importer plugin for Nigel"
 requires-python = ">=3.12"
 dependencies = ["nigel"]
 
+[tool.uv.sources]
+nigel = { path = "../..", editable = true }
+
 [project.entry-points."nigel.plugins"]
 bofa = "nigel_bofa.plugin"
 
