docs: update CLAUDE.md for importer plugins and PDF export
- Architecture: parsers now in plugins, registry has detect() support
- Commands: --format override, export pnl/all
- Structure: nigel-bofa, nigel-gusto, nigel-export-pdf plugins
- Constraints: detect() auto-detection, post_import hooks, PDF via WeasyPrint
- Fix nigel-k1 pyproject.toml uv source for local dev

--- a/plugins/nigel-k1/pyproject.toml
+++ b/plugins/nigel-k1/pyproject.toml
@@ -5,6 +5,9 @@ description = "K-1 prep report plugin for Nigel"
 requires-python = ">=3.12"
 dependencies = ["nigel"]
 
+[tool.uv.sources]
+nigel = { path = "../..", editable = true }
+
 [project.entry-points."nigel.plugins"]
 k1_prep = "nigel_k1.plugin"
 
