--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,16 @@ jobs:
         include:
           - target: x86_64-apple-darwin
             runner: macos-13
+            ext: ""
           - target: aarch64-apple-darwin
             runner: macos-14
+            ext: ""
           - target: x86_64-unknown-linux-gnu
             runner: ubuntu-latest
+            ext: ""
+          - target: x86_64-pc-windows-msvc
+            runner: windows-latest
+            ext: ".exe"
     runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v4
@@ -26,11 +32,13 @@ jobs:
         with:
           targets: ${{ matrix.target }}
       - run: cargo build --release --target ${{ matrix.target }}
-      - run: mv target/${{ matrix.target }}/release/nigel nigel-${{ matrix.target }}
+      - name: Rename binary
+        shell: bash
+        run: mv target/${{ matrix.target }}/release/nigel${{ matrix.ext }} nigel-${{ matrix.target }}${{ matrix.ext }}
       - uses: actions/upload-artifact@v4
         with:
           name: nigel-${{ matrix.target }}
-          path: nigel-${{ matrix.target }}
+          path: nigel-${{ matrix.target }}${{ matrix.ext }}
 
   release:
     needs: build
