--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ pdf = ["dep:printpdf"]
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
-rusqlite = { version = "0.31", features = ["bundled"] }
+rusqlite = { version = "0.31", features = ["bundled", "backup"] }
 csv = "1"
 calamine = { version = "0.25", optional = true }
 regex = "1"
