--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,10 @@ jobs:
       matrix:
         include:
           - target: x86_64-apple-darwin
-            runner: macos-13
+            runner: macos-latest
             ext: ""
           - target: aarch64-apple-darwin
-            runner: macos-14
+            runner: macos-latest
             ext: ""
           - target: x86_64-unknown-linux-gnu
             runner: ubuntu-latest
