--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ regex = "1"
 comfy-table = "7"
 dialoguer = "0.11"
 crossterm = "0.28"
+ratatui = "0.29"
+textwrap = "0.16"
 colored = "2"
 sha2 = "0.10"
 hex = "0.4"
@@ -26,7 +28,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 dirs = "5"
 printpdf = { version = "0.7", optional = true }
-terminal_size = "0.4"
 anyhow = "1"
 thiserror = "1"
 
