--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ colored = "2"
 sha2 = "0.10"
 hex = "0.4"
 chrono = "0.4"
+rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 dirs = "5"
