fix: address onboarding password review feedback
- Use zeroize crate to zero password memory on drop and clear
- Trim passwords before confirmation comparison (matches storage trim)
- Clear mismatch error on first keystroke after failed confirmation
- Add Delete key support to confirm screen (parity with name input)
- Extract insert_cursor() and confirm_byte_pos() helpers to DRY up
  duplicated cursor-insertion logic
- Replace magic field indices with named constants (FIELD_NAME, etc.)
- Replace inline expression tests with struct-exercising finish tests
- Add tests for delete key, mismatch clearing, and trim comparison

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ dirs = "5"
 printpdf = { version = "0.7", optional = true }
 anyhow = "1"
 thiserror = "1"
+zeroize = "1.8.2"
 
 [dev-dependencies]
 tempfile = "3"
